# drgnai

./: README.md  pyproject.toml
src/: analysis.py  analyze.py  command_line.py  configuration.py  ctf.py  dataset.py  dataset_fast.py  fft.py  lattice.py  lie_tools.py  losses.py  mask.py  metrics.py  models.py  pose_search.py  reconstruct.py  shift_grid.py  so3_grid.py  source.py  starfile.py  summary.py  utils.py  visualization.py
src/templates/: analysis-template.ipynb
testing/: conftest.py  environment.yml  hand_test.sh  test_reconstruct.py  test_setup.py  test_trainer.py
testing/data/: M_ctf.pkl  M_particles_sub10.star  README.md  data-paths.yaml  hand-dataset.yaml  hand-ind3.pkl  hand_ctf.pkl  hand_model.yaml  hand_pose.pkl  pose-dataset.yaml
testing/data/tilts/: 00256_Ribosomes_1.70A.mrcs  00263_Ribosomes_1.70A.mrcs  00272_Ribosomes_1.70A.mrcs  00276_Ribosomes_1.70A.mrcs  00281_Ribosomes_1.70A.mrcs  00286_Ribosomes_1.70A.mrcs  00287_Ribosomes_1.70A.mrcs  00294_Ribosomes_1.70A.mrcs  00297_Ribosomes_1.70A.mrcs  00299_Ribosomes_1.70A.mrcs
website/: index.html
website/static/css/: index.css
